Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • mutter mutter
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 1,144
    • Issues 1,144
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 119
    • Merge requests 119
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOMEGNOME
  • muttermutter
  • Issues
  • #1536
Closed
Open
Issue created Nov 17, 2020 by Simon McVittie@smcvDeveloper

Input unresponsive after screen blank since 209b1ba3

https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=974172

We've had a bug report in Debian that after upgrading mutter from 3.38.0 to 3.38.1 on multiple arm64 (aarch64) systems, the keyboard and mouse become unresponsive and GNOME Shell cannot be unlocked.

One user reports that "The screen can be unlocked if it is not blanked, but it cannot be unlocked after blanking".

Apparently this regressed with 209b1ba3 "clutter/frame-clock: Adapt refresh rate from to frame info".

Perhaps the frame rate needs a minimum, so that even if no frames are drawn at all, the frame-clock still runs?

Edited Nov 26, 2020 by Robert Mader
Assignee
Assign to
Time tracking